tests/instantiating/blackbox_size_not_set/stderr.golden
error: 'Bb' of type 'blackbox' must have 'size' property set
bus.fbd +2:2
   |
 2 | 	Bb blackbox
   | 	^^
